# fstack

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  README.md  compose.yml  docker-entrypoint.sh  pyproject.toml  secret.sh
.claude/commands/: ultra-think.md
.github/workflows/: publish.yml
auth/: README.md
console/: README.md  __init__.py  app.py  cli.py
console/core/: __init__.py  actions.py  errors.py  inventory.py  jobs.py  runner.py  secrets.py  service.py
console/static/: VENDORED.md  index.html
docs/: explore-eks-readiness.md  explore-fleet-model-tags.md  explore-nicegui-infra-console.md  explore-observability.md  ultra-think-infra-v2.md
experiments/: README.md
experiments/zitadel-kong-api/: .env.example  .gitignore  README.md  docker-compose.yml  test.sh
experiments/zitadel-kong-api/api/: docker-compose.netbird.yml  docker-compose.yml  main.py
experiments/zitadel-kong-api/cli/: Dockerfile  assertion.go  genconfig.go  main.go  token.go  zitadel.go
experiments/zitadel-kong-api/config/: kong.tmpl.yml
interim/netbird-clouder/: docker-compose.yml
openspec/changes/infra-console-spike/: design.md  proposal.md  tasks.md
openspec/changes/infra-console-spike/specs/console-api/: spec.md
openspec/changes/infra-console-spike/specs/console-cli/: spec.md
openspec/changes/infra-console-spike/specs/console-core/: spec.md
openspec/changes/infra-v2/: design.md  proposal.md  tasks.md
openspec/changes/repo-split/: design.md  proposal.md  tasks.md
scripts/: gen_secret.py
tests/: test_core.py  test_secrets.py
(+9 files in other folders)
