[project]
name = "infra-console"
version = "0.1.0"
description = "Operator console for the infra layer: dashboard + CLI over Ansible (spike)"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.12",
    "uvicorn==0.34.2",
    "pyyaml==6.0.3",
]

[dependency-groups]
dev = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["console"]
